@@ -25,84 +25,40 @@ def retrieveVideoInfo(video_id):
     video_info.set_video_hosting_info(getVideoHostingInfo())
     video_info.set_video_id(video_id)
     try:
-        video_link = 'http://www.dailymotion.com/video/' + str(video_id)
+        video_link = 'http://www.dailymotion.com/embed/video/' + str(video_id)
         html = HttpUtils.HttpClient().getHtmlContent(url=video_link)
         HttpUtils.HttpClient().disableCookies()
-        newseqeunce = None
-        try:
-            flashVarsStr = urllib.unquote(re.compile('param name="flashvars" value="(.+?)"').findall(html)[0]).decode('utf8')
-            flashVars = re.compile('&sequence=(.*)').findall(flashVarsStr)
-            newseqeunce = flashVars[0]
-        except:
-            Logger.logError('Error while parsing sequence!!')
-        if(newseqeunce is None):
-            sequence = re.compile('"sequence",  "(.+?)"').findall(html)
-            newseqeunce = urllib.unquote(sequence[0]).decode('utf8').replace('\\/', '/')
-            imgSrc = re.compile('og:image" content="(.+?)"').findall(html)
-            if(len(imgSrc) == 0):
-                imgSrc = re.compile('/jpeg" href="(.+?)"').findall(html)
-            dm_low = re.compile('"sdURL":"(.+?)"').findall(newseqeunce)
-            dm_high = re.compile('"hqURL":"(.+?)"').findall(newseqeunce)
-            
-            video_info.set_video_image(imgSrc[0])
-            video_info.set_video_stopped(False)
-            
-            if(len(dm_high) == 0 and len(dm_low) == 1):
-                video_info.add_video_link(VIDEO_QUAL_SD, dm_low[0])
-            elif(len(dm_low) == 0 and len(dm_high) == 1):
-                video_info.add_video_link(VIDEO_QUAL_HD_720, dm_high[0])
-            else:
-                video_info.add_video_link(VIDEO_QUAL_SD, dm_low[0])
-                video_info.add_video_link(VIDEO_QUAL_HD_720, dm_high[0])
-        else:
-            
-            Logger.logDebug(newseqeunce);
-            jObj = json.loads(newseqeunce)
-            for sequenceItem in jObj['sequence'][0]['layerList'][0]['sequenceList']:
-                if sequenceItem['name'] == 'main' or sequenceItem['name'] == 'reporting':
-                    for layerItem in sequenceItem['layerList']:
-                        if layerItem['name'] == 'reporting' and layerItem['type'] == 'Reporting':
-                            video_info.set_video_name((layerItem['param']['extraParams']['videoTitle']).replace('+', ' '))
-                        elif layerItem['name'] == 'video' and layerItem['type'] == 'VideoFrame':
-                            params = layerItem['param']
-                            if not params.has_key('sdURL') and not params.has_key('hqURL'):
-                                autoURL = params['autoURL']
-                                videoData = HttpUtils.HttpClient().getHtmlContent(url=autoURL)
-                                jVideoData = json.loads(videoData)
-                                dm_SD = None
-                                dm_720 = None
-                                dm_1080 = None
-                                for alternate in jVideoData['alternates']:
-                                    if alternate['name'] == '380' and dm_SD == None:
-                                        dm_SD = alternate['template'].replace('mnft', 'mp4')
-                                    elif alternate['name'] == '480':
-                                        dm_SD = alternate['template'].replace('mnft', 'mp4')
-                                    elif alternate['name'] == '720':
-                                        dm_720 = alternate['template'].replace('mnft', 'mp4')
-                                    elif alternate['name'] == '1080':
-                                        dm_1080 = alternate['template'].replace('mnft', 'mp4')
-                                
-                                if dm_SD is not None:
-                                    video_info.add_video_link(VIDEO_QUAL_SD, dm_SD, addReferer=True, refererUrl=video_link)
-                                if dm_720 is not None:
-                                    video_info.add_video_link(VIDEO_QUAL_HD_720, dm_720, addReferer=True, refererUrl=video_link)
-                                if dm_1080 is not None:
-                                    video_info.add_video_link(VIDEO_QUAL_HD_1080, dm_1080, addReferer=True, refererUrl=video_link)
-                                video_info.set_video_stopped(False)
-                            else:
-                                if params.has_key('IdURL'):
-                                    video_info.add_video_link(VIDEO_QUAL_LOW, params['IdURL'])
-                                if params.has_key('sdURL'):
-                                    video_info.add_video_link(VIDEO_QUAL_SD, params['sdURL'])
-                                if params.has_key('hqURL'):
-                                    video_info.add_video_link(VIDEO_QUAL_SD, params['hqURL'])
-                                if params.has_key('hd720URL'):
-                                    video_info.add_video_link(VIDEO_QUAL_HD_720, params['hd720URL'])
-                                video_info.set_video_stopped(False)
-                        elif layerItem['name'] == 'relatedBackground' and layerItem['type'] == 'Background':
-                            params = layerItem['param']
-                            if params.has_key('imageURL'):
-                                video_info.set_video_image(params['imageURL'])
+        
+        matchFullHD = re.compile('"stream_h264_hd1080_url":"(.+?)"', re.DOTALL).findall(html)
+        matchHD = re.compile('"stream_h264_hd_url":"(.+?)"', re.DOTALL).findall(html)
+        matchHQ = re.compile('"stream_h264_hq_url":"(.+?)"', re.DOTALL).findall(html)
+        matchSD = re.compile('"stream_h264_url":"(.+?)"', re.DOTALL).findall(html)
+        matchLD = re.compile('"stream_h264_ld_url":"(.+?)"', re.DOTALL).findall(html)
+        dm_LD = None
+        dm_SD = None
+        dm_720 = None
+        dm_1080 = None
+        
+        if matchFullHD:
+            dm_1080 = urllib.unquote_plus(matchFullHD[0]).replace("\\", "")
+        if matchHD:
+            dm_720 = urllib.unquote_plus(matchHD[0]).replace("\\", "")
+        if dm_720 is None and matchHQ:
+            dm_720 = urllib.unquote_plus(matchHQ[0]).replace("\\", "")
+        if matchSD:
+            dm_SD = urllib.unquote_plus(matchSD[0]).replace("\\", "")
+        if matchLD:
+            dm_LD = urllib.unquote_plus(matchLD[0]).replace("\\", "")
+        
+        if dm_LD is not None:
+            video_info.add_video_link(VIDEO_QUAL_LOW, dm_LD, addReferer=True, refererUrl=video_link)
+        if dm_SD is not None:
+            video_info.add_video_link(VIDEO_QUAL_SD, dm_SD, addReferer=True, refererUrl=video_link)
+        if dm_720 is not None:
+            video_info.add_video_link(VIDEO_QUAL_HD_720, dm_720, addReferer=True, refererUrl=video_link)
+        if dm_1080 is not None:
+            video_info.add_video_link(VIDEO_QUAL_HD_1080, dm_1080, addReferer=True, refererUrl=video_link)
+        video_info.set_video_stopped(False)
     except Exception, e:
         Logger.logError(e)
         video_info.set_video_stopped(True)
